--- a/data-viz-platform/package.json
+++ b/data-viz-platform/package.json
@@ -14,7 +14,9 @@
     "firebase": "^11.9.1",
     "react": "^19.1.0",
     "react-dom": "^19.1.0",
-    "react-router-dom": "^7.6.2"
+    "react-is": "^19.1.0",
+    "react-router-dom": "^7.6.2",
+    "recharts": "^2.15.4"
   },
   "devDependencies": {
     "@eslint/js": "^9.25.0",
