--- a/data-viz-platform/package.json
+++ b/data-viz-platform/package.json
@@ -16,7 +16,8 @@
     "react-dom": "^19.1.0",
     "react-is": "^19.1.0",
     "react-router-dom": "^7.6.2",
-    "recharts": "^2.15.4"
+    "recharts": "^2.15.4",
+    "zustand": "^5.0.5"
   },
   "devDependencies": {
     "@eslint/js": "^9.25.0",
